--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
     "name"                   : "Star-rules",
     "version"                : "0.0.2",
+	"manifest_version"       : 2,
     "description"            : "Apply CSS rules to all elements on the page",
-    "background_page"        : "background.html",
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+	"background"             : {
+	    "scripts"            : ["background.js"]
+	},
     "browser_action"         : {
-        "default_icon" : "images/star_orange_32.png",
-        "default_title": "Toggle CSS transition on '*' selector"
+        "default_icon"       : "images/star_orange_32.png",
+        "default_title"      : "Toggle CSS transition on '*' selector"
     },
     "icons"                  : {
         "256": "images/star_orange_256.png",
